@@ -1,4 +1,6 @@
 2.2.7
+ * cqlsh: COPY FROM should use regular inserts for single statement batches and
+          report errors correctly if workers processes crash on initialization (CASSANDRA-11474)
  * Always close cluster with connection in CqlRecordWriter (CASSANDRA-11553)
 Merged from 2.1:
  * (cqlsh) Fix potential COPY deadlock when parent process is terminating child
